--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ padding-top: 11%;
         <ul class="list-inline">
           <li class="list-inline-item"><a href="https://www.facebook.com/satheesh.kannur.73"><i class="fab fa-facebook-f"></i></a></li>
           <li class="list-inline-item"><a href="mailto:kannursatheesh47@gmail.com"><i class="far fa-envelope"></i></a></li>
-          
+          <li class="list-inline-item"><a href="https://wa.me/+91799439189" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
         <p>&copy; 2023 Haritham AutoElectricals And Car A/C | designed by Nandana | All rights reserved.</p>
       </div>
     </div>
