--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ padding-top: 11%;
         </p>
         <p>Our automobile repair shop has been serving the community for over 2 years, with a highly skilled mechanic  with 34 years of experience in this field, we strive to provide top-notch repair services for all types of vehicles.</p>
         <p>At our shop, we prioritize customer satisfaction and take pride in delivering reliable and efficient repairs. Our mechanic have 32 years of experience in this field at Saudi Arabia and 2 years of experience in Kerala,Kannur..</p>
+         <p><b>Working Time : 9:00 am - 7:30 pm(Monday-Saturday)</b></p>
       </div>
       <div class="col-lg-3 col-8 mx-auto ">
         <img src="owner.jpeg" alt="About Image" style="height: 14rem;" class="img-fluid rounded-circle ">
@@ -243,6 +244,7 @@ padding-top: 11%;
         <div class="col-md-6 mt-3">
           <h4>About Us</h4>
           <p>Our automobile repair shop has been serving the community for over 2 years, with a highly skilled mechanic  with 34 years of experience in this field, we strive to provide top-notch repair services for all types of vehicles.</p>
+           <p><b>Working Time : 9:00 am - 7:30 pm(Monday-Saturday)</b></p>
         </div>
         <div class="col-md-3 mt-3">
           <h4>Quick Links</h4>
